Archiwalne - new version

--- a/strony/wersje-archiwalne.html
+++ b/strony/wersje-archiwalne.html
@@ -87,7 +87,23 @@
                     <div class="cf7_text_shortcode">[select* program_version_mobile-android "wybierz numer wersji|" "8.40.0|wapromobile8400.apk" "8.31.2|mobileandroid8312.apk" "8.30.2|mobileandroid8302.apk" "8.30.0.1|mobileandroid8300.apk" "8.21.0.5|mobileandroid8210.apk" "8.20.2|mobileandroid8202.apk"
                         "8.10.0.5|mobileandroid8100.apk" "8.00.4.1|mobileandroid8004.apk" "7.90.4.2|mobileandroid7904.apk"]
                     </div>
+                    [/group] [group wersja-wf-kaper-dos]
+                    <div class="cf7_text_shortcode">[select* program_version_wf-kaper-dos "wybierz numer wersji|" "5.907|kaper5907.zip" "5.906|kaper5906.zip" "5.822|kaper5822.zip" "5.821|kaper5821.zip" "5.820|kaper5820.zip" "5.710|kaper5710.zip" "5.702|kaper5702.ZIP" "5.700|mkaper5700.zip"
+                        "5.632|kaper5632.zip" "5.600|kaper5600.zip" "5.512|kaper5512.zip" "5.431|kaper5431.zip" "5.420|kaper5420.zip" "5.311|kaper5311.zip" "5.300|kaper5300.zip" "5.231|kaper5231.zip" "5.220|kaper5220.zip" "5.211|kaper5211.zip" "5.200|kaper5200.zip"
+                        "5.104|kaper5104.zip" "5.103|kaper5103.zip" "5.102|kaper5102.zip" "5.100|kaper5100.zip" "5.003|kaper5003.zip" "5.002|kaper5002.zip" "5.001|kaper5001.zip" "4.903|kaper4903.ZIP" "4.803|kaper4803.ZIP" "4.800|kaper4800.ZIP" "4.715|kaper4715.ZIP"
+                        "4.713|kaper4713.zip" "4.701|kaper4701.ZIP"]
+                    </div>
+                    [/group] [group wersja-wf-mag-dos]
+                    <div class="cf7_text_shortcode">[select* program_version_wf-mag-dos "wybierz numer wersji|" "5.100|mag5100.zip" "5.020|mag5020.zip" "4.910|mag4910.zip" "4.900|mag4900.zip" "4.730|mag4730.zip" "4.720|mag4720.zip" "4.710|mag4710.zip" "4.702|mag4702.zip" "4.211|mag4211.zip"
+                        "4.121z|mag4121z.zip" "4.121u|mag4121u.zip" "4.120|mag4120.ZIP" "4.117|mag4117.zip" "4.112|mag4112.ZIP" "4.104|mag4104.zip" "4.102|mag4102.zip" "4.101|mag4101.zip" "4.002|mag4002.zip" "4.001|mag4001.zip" "3.25e|mag325e.zip" "3.18e|mag318e.zip"
+                        "3.12c|mag312c.zip"]
+                    </div>
+                    [/group] [group wersja-wf-fakir-dos]
+                    <div class="cf7_text_shortcode">[select* program_version_wf-fakir-dos "wybierz numer wersji|" "2.201|fakir2201.zip" "2.103|fakir2103.zip" "2.100|fakir2100.zip" "2.001|fakir2001.zip" "2.000|fakir2000.zip" "1.901|fakir1901.zip" "1.900|fakir1900.zip" "1.806|fakir1806.zip"
+                        "1.805|fakir1805.zip" "1.804|fakir1804.zip" "1.706|fakir1706.ZIP" "1.704|fakir1704.ZIP" "1.703|fakir1703.zip" "1.701|fakir1701.ZIP" "1.64a|fak164ast.zip"]
+                    </div>
                     [/group]
+
                 </div>
                 <div class="cf7-text cf7-main-builder dropped ui-sortable-handle" id="cf7-container-builder-1557135180849">
                     <div class="cf7-ctrl cf7-ctrl-inner">
@@ -172,10 +188,3 @@
     </div>
 </div>
 <div class="cf7-builder-container-row1 cf7-builder-container-row-inner cf7-main-builder dropped ui-sortable-placeholder ui-sortable-handle"></div>
-
-
-
-
-
-Poniżej znajduje się link do wybranej przez Ciebie wersji programu. POBIERZ WERSJĘ ARCHIWALNĄ lub skopiuj poniższy link do przeglądarki: https://wapro24bis.assecobs.pl/wysylka/[program_version_aukcje][program_version_analizy][program_version_best][program_version_fakir][program_version_fakturka][program_version_gang][program_version_jpk][program_version_kaper][program_version_mag][program_version_mobile][program_version_mobile-android]
-Pozdrawiamy Zespół WAPRO ERP Asseco Business Solutions S.A. Oddział w Warszawie ul. Adama Branickiego 13 wapro.pl
