--- a/strony/wersje-archiwalne.html
+++ b/strony/wersje-archiwalne.html
@@ -141,8 +141,10 @@
                         <div class="cf7-remove"></div>
                     </div>
                     <div class="cf7_font"></div>
-                    <div class="cf7_text_shortcode">[text_content] * dane niezbędne, aby otrzymać link do pobrania archiwalnej wersji programu. ** Twój adres e-mail zostanie użyty jedynie do wysłania wiadomości zawierającej link do pobrania programu i nie będzie przez nas przechowywany
-                        ani przetwarzany. </div>
+                    <div class="cf7_text_shortcode" style="margin-top: 10px;">[text_content]
+                        <p><span style="color:red;">*</span> dane niezbędne, aby otrzymać link do pobrania archiwalnej wersji programu.</p>
+                        <p><span style="color: red;">**</span> Twój adres e-mail zostanie użyty jedynie do wysłania wiadomości zawierającej link do pobrania programu i nie będzie przez nas przechowywany ani przetwarzany.</p>
+                    </div>
                 </div>
                 <div class="cf7-text cf7-main-builder dropped ui-sortable-handle" id="cf7-container-builder-1557231141466">
                     <div class="cf7-ctrl cf7-ctrl-inner">
@@ -151,13 +153,6 @@
                         <div class="cf7-dub cf7-dub-text"></div>
                         <div class="cf7-remove"></div>
                     </div>
-                    <div class="cf7_text_label"></div>
-                    <div class="cf7_font"></div>
-                    <div class="cf7_text_shortcode">
-                        <div class="szkolenia_zgoda_header">W związku z przesłaniem przez Ciebie formularza dochodzi do przetwarzania przez nas Twoich danych osobowych. Informację o tym, w jakim celu przetwarzamy Twoje dane osobowe, oraz jakie prawa Ci przysługują w związku z ich przetwarzaniem
-                            przez nas, znajdziesz w <a href="https://www.wapro.pl">Klauzuli informacyjnej</a>.
-                        </div>
-                        [acceptance acceptance-1 use_label_element] * Zapoznałem/am się z <a href="https://www.wapro.pl">Klauzulą informacyjną</a> [/acceptance]</div>
                 </div>
             </div>
         </div>
@@ -181,7 +176,7 @@
                         <div class="cf7-remove"></div>
                     </div>
                     <div class="cf7_font"></div>
-                    <div class="cf7_text_shortcode">[submit "Pobierz wersję archiwalną"]</div>
+                    <div class="cf7_text_shortcode" style="margin-top: 10px;">[submit "Pobierz wersję archiwalną"]</div>
                 </div>
             </div>
         </div>
